syntax = "proto3";

package metrics;

// 指定 Go 生成代码的包路径
option go_package = ".;protocol";

// 定义 CPU 信息
message CPUInfo {
  int32 cores = 1;
  string model_name = 2;
  double mhz = 3;
  int32 cache_size = 4;
  double usage = 5;
}

// 定义内存信息
message MemoryInfo {
  uint64 total = 1;
  uint64 available = 2;
  uint64 used = 3;
  double used_percent = 4;
}

// 定义磁盘信息
message DiskInfo {
  string device = 1;
  uint64 total = 2;
  uint64 free = 3;
  uint64 used = 4;
  double used_percent = 5;
}

// 定义网络信息
message NetworkInfo {
  string interface_name = 1;
  uint64 bytes_sent = 2;
  uint64 bytes_recv = 3;
  uint64 packets_sent = 4;
  uint64 packets_recv = 5;
}

// 定义主机信息
message HostInfo {
  string hostname = 1;
  string os = 2;
  string platform = 3;
  string platform_version = 4;
  uint64 uptime = 5;
}

// 定义负载信息
message LoadInfo {
  double load1 = 1;
  double load5 = 2;
  double load15 = 3;
}

// 定义传输的 Metrics 数据结构
message Metrics {
  string ip = 1;
  CPUInfo cpu_info = 2;
  MemoryInfo memory_info = 3;
  DiskInfo disk_info = 4;
  NetworkInfo network_info = 5;
  HostInfo host_info = 6;
  LoadInfo load_info = 7;
}

// 定义 MetricsService 服务
service MetricsService {
  rpc SendMetrics (Metrics) returns (Response);
}

// 定义一个响应代码
message Response {
  string status = 1;
}